Added accessible text to stepper buttons

--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
                         type="button"
                         data-step="+1"
                       >
+                        <span class="sr-only">Increment by 1</span>
                         <svg class="icon-arrow">
                           <use xlink:href="#icon-arrow-up"></use>
                         </svg>
@@ -178,6 +179,7 @@
                         type="button"
                         data-step="-1"
                       >
+                        <span class="sr-only">Decrement by 1</span>
                         <svg class="icon-arrow">
                           <use xlink:href="#icon-arrow-down"></use>
                         </svg>
@@ -209,6 +211,7 @@
                         type="button"
                         data-step="+1"
                       >
+                        <span class="sr-only">Increment by 1</span>
                         <svg class="icon-arrow">
                           <use xlink:href="#icon-arrow-up"></use>
                         </svg>
@@ -218,6 +221,7 @@
                         type="button"
                         data-step="-1"
                       >
+                        <span class="sr-only">Decrement by 1</span>
                         <svg class="icon-arrow">
                           <use xlink:href="#icon-arrow-down"></use>
                         </svg>
@@ -249,6 +253,7 @@
                         type="button"
                         data-step="+1"
                       >
+                        <span class="sr-only">Increment by 1</span>
                         <svg class="icon-arrow">
                           <use xlink:href="#icon-arrow-up"></use>
                         </svg>
@@ -258,6 +263,7 @@
                         type="button"
                         data-step="-1"
                       >
+                        <span class="sr-only">Decrement by 1</span>
                         <svg class="icon-arrow">
                           <use xlink:href="#icon-arrow-down"></use>
                         </svg>
